增强JavaFX模块路径检查和重启功能： - 添加了检查JavaFX模块路径的方法 - 实现了使用JavaFX模块路径重启进程的功能 - 将日志输出替换为控制台输出以提高可读性 - 改进了错误处理和诊断信息输出